--- a/app.json
+++ b/app.json
@@ -3,25 +3,21 @@
     "name": "native",
     "slug": "native",
     "version": "1.0.0",
-
     "scheme": "native",
     "web": {
       "bundler": "metro",
       "output": "static",
       "favicon": "./assets/favicon.png"
     },
-    "plugins": ["expo-router"],
+    "plugins": ["expo-router", "expo-font"],
     "experiments": {
       "typedRoutes": true,
-
       "tsconfigPaths": true
     },
-
+    "newArchEnabled": true,
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-
     "userInterfaceStyle": "light",
-
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
