--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
   "expo": {
-    "name": "native",
-    "slug": "native",
+    "name": "mello-notes",
+    "slug": "mello-notes",
     "version": "1.0.0",
-    "scheme": "native",
+    "scheme": "mello-notes",
     "web": {
       "bundler": "metro",
       "output": "static",
