--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo": "^52.0.35",
     "expo-constants": "~17.0.6",
     "expo-font": "~13.0.4",
+    "expo-image": "~2.0.6",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.6",
     "expo-splash-screen": "~0.29.22",
