--- a/package.json
+++ b/package.json
@@ -35,10 +35,13 @@
     "react-hook-form": "^7.54.2",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-pell-rich-editor": "^1.9.0",
     "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
+    "react-native-webview": "^13.13.2",
     "tailwind-merge": "^3.0.1"
   },
   "devDependencies": {
