--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-hook-form": "^7.54.2",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-htmlview": "^0.17.0",
     "react-native-pell-rich-editor": "^1.9.0",
     "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "4.12.0",
