--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@expo-google-fonts/nunito": "^0.2.3",
     "@expo-google-fonts/titan-one": "^0.2.3",
     "@expo/vector-icons": "^14.0.0",
+    "@google/generative-ai": "^0.22.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^7.0.3",
     "@supabase/supabase-js": "^2.38.4",
