--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/runtime": "^7.26.9",
     "@expo-google-fonts/nunito": "^0.2.3",
     "@expo-google-fonts/titan-one": "^0.2.3",
     "@expo/vector-icons": "^14.0.0",
