--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "start": "expo start",
     "prebuild": "expo prebuild",
     "lint": "eslint \"**/*.{js,jsx,ts,tsx}\" && prettier -c \"**/*.{js,jsx,ts,tsx,json}\"",
@@ -18,6 +18,7 @@
     "@expo/vector-icons": "^14.0.0",
     "@google/generative-ai": "^0.22.0",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/cli": "^15.1.3",
     "@react-navigation/native": "^7.0.3",
     "@supabase/supabase-js": "^2.38.4",
     "clsx": "^2.1.1",
