--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native": "^7.0.3",
     "@supabase/supabase-js": "^2.38.4",
     "clsx": "^2.1.1",
+    "eas-cli": "^15.0.12",
     "expo": "^52.0.35",
     "expo-constants": "~17.0.6",
     "expo-font": "~13.0.4",
